--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/full_dashboard_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ScrollView
         android:layout_width="match_parent"
@@ -78,12 +79,12 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
                         android:prompt="@string/select_country"
-                        android:spinnerMode="dropdown"
                         android:textAlignment="center"
                         android:layout_height="wrap_content"
-                        app:ccp_showFullName="true"
+                        app:ccp_defaultNameCode="UG"
                         app:ccp_showPhoneCode="false"
-                        app:ccp_showNameCode="false"
+                        app:ccp_showFullName="false"
+                        app:ccp_showNameCode="true"
                         />
                     <!--<com.hbb20.CountryCodePicker
                         android:id="@+id/ccp"
@@ -268,6 +269,7 @@
                 android:layout_height="200dp"
                 android:layout_margin="20dp"
                 app:cardCornerRadius="5dp"
+                app:cardBackgroundColor="@color/grey"
                 app:cardElevation="10dp">
             </androidx.cardview.widget.CardView>
 
